--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,4 +25,8 @@
     <string name="logining">程序在后台执行, 请查看日志！</string>
     <string name="setting_su">设置成功</string>
 
+    <string name="title_alert">提示信息</string>
+    <string name="ok">确定</string>
+    <string name="cancel">取消</string>
+
 </resources>
